@@ -65,8 +65,13 @@ try {
             # Give SYSTEM permission to use the PFX file's private key
             $keyName = $importedPfxCertificate.PrivateKey.CspKeyContainerInfo.UniqueKeyContainerName
             $keyPath = "C:\ProgramData\Microsoft\Crypto\RSA\MachineKeys\$keyName"
-            Import-Module Microsoft.PowerShell.Security -Force
-            $acl = [System.IO.FileSystemAclExtensions]::GetAccessControl([System.IO.DirectoryInfo]::new($keyPath), 'Access')
+            if ($PSVersionTable.PSVersion -ge "6.0.0") {
+                Import-Module Microsoft.PowerShell.Security -Force
+                $acl = [System.IO.FileSystemAclExtensions]::GetAccessControl([System.IO.DirectoryInfo]::new($keyPath), 'Access')
+            }
+            else {
+                $acl = (Get-Item $keyPath).GetAccessControl('Access')
+            }
             $permission = 'NT AUTHORITY\SYSTEM',"Full","Allow"
             $accessRule = new-object System.Security.AccessControl.FileSystemAccessRule $permission
             $acl.AddAccessRule($accessRule)
