@@ -1,4 +1,7 @@
 6.0.9
+Issue 3404 New-BcContainerBcUser fails with 'Invoke-SqlCmd' error when running BC24
+Remove support for pre 1.0.2.15 generic images
+Issue 3406 Regression - Set-BcContainerKeyVaultAadAppAndCertificate only worked when running pwsh in container
 
 6.0.8
 Fix error where Publish-BcNuGetPackageToContainer doesn't work with BC 24
